# prompt-book

./: LICENSE  README.md  app-arch.md  events.jsonl  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: export-template.html
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  model.rs  parser.rs
src-tauri/src/commands/: discover.rs  export.rs  parse.rs  session.rs
src-tauri/src/model/: session.rs
src-tauri/src/parser/: claude.rs  codex.rs  copilot.rs  detect.rs  records.rs
src/components/: Collapsible.tsx  DropZone.tsx  ErrorBoundary.tsx  ExportButton.tsx  MessageBubble.tsx  SessionList.tsx  SessionView.tsx  ThinkingBlock.tsx  ToolCallBlock.tsx
src/hooks/: useDiscover.ts  useSession.ts
src/lib/: commands.ts  content.ts  formatters.ts  transforms.ts  types.ts
src/styles/: index.css
