[package]
name = "prompt-book"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "prompt_book_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
